--- a/music/bio.html
+++ b/music/bio.html
@@ -14,14 +14,14 @@
     <h1 class="mt-5"> <i>Cryptwarblr</i></h1>
     <strong><i>Hysteresis</i></strong>, 2022 <br>
     <iframe src="https://www.youtube.com/embed/1yfVcYuQp_4" target="_blank" style="width:640px; height:360px; margin:10px; border:solid 3px; border-color: #000000;" allowfullscreen></iframe>
-  
-    <p style="padding-left:150px; padding-right:150px; font-size: 150%"> Music with the Cryptwarblr, a circuit-bent Casiotone MT-240.</p></br>
-    <a style="font-size:150%;" href="technical.html" title="technical"><i>Technical Details</i></a><br><br>
-    
+    <br><br>
+    <img src="cryptwarblr-transparent.png" alt="transparent"style="width:500px;height:250px;">
+    <br><br>
+    <a style="font-size:150%;" href="about.html" title="circuitbending"><i>circuit bending details</i></a><br>
+    <a style="font-size:150%;" href="technical.html" title="technical"><i>technical details</i></a><br>
     <p style="font-size: 150%">bernhardtayang {at} gmail {dot} com</p>
         <a href="https://soundcloud.com/cryptwarblr" target="_blank"><i>More music:</i><br>
-        <img src="soundcloud.png" alt="insta" style="width:50px;height:50px;"></a><br><br>
-        <a href="https://www.instagram.com/cryptwarblr_/" target="_blank"><i>Social:</i><br>
+        <img src="soundcloud.png" alt="insta" style="width:50px;height:50px;"></a>
         <img src="insta.png" alt="youtube" style="width:50px;height:50px;"></a>
   </body>
 
